fixed padding for slicers on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -400,18 +400,10 @@ background-color: rgba(255, 255, 255, 0.0) !important;
     margin-top: 50px;
     height: 350px !important;
   } */
-  .btn.graphics {
+  .btn.slicer {
     background-color: #85a35a;
-    color: #ffffff;
-    border: none;
-    text-transform: uppercase;
-    font-weight: 400;
-    font-size: 10px !important;
-    cursor: pointer;
-    z-index: 1;
-    padding: 0.7rem !important;
-    font-size: 0.5rem !important;
-    box-shadow: 0 5px 12px -2px rgba(0, 0, 0, 0.3);
+    padding: 10px !important;
+    font-size: 12px !important;
 
   }
     .btn:hover {
